--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,9 +1,17 @@
 <html>
 <body>
 Bem vindo ao nosso gerenciador de empresas!<br/>
+
 <form action="novaEmpresa" method="post">
     Nome: <input type="text" name="nome" /><br />
     <input type="submit" value="Enviar" />
 </form>
+
+<form action="login" method="post">
+    Email: <input type="text" name="email" /><br />
+    Senha: <input type="password" name="senha" /><br />
+    <input type="submit" value="Login" />
+</form>
+
 </body>
 </html>
