Add Cookies helper class and logout servlet

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,5 +13,9 @@ Bem vindo ao nosso gerenciador de empresas!<br/>
     <input type="submit" value="Login" />
 </form>
 
+
+<form action="logout" method="post">
+    <input type="submit" value="Logout" />
+</form>
 </body>
 </html>
